build: relax tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
     "module": "commonjs",
     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
     "target": "es2019",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
+    "noImplicitAny": false,
+    "noImplicitThis": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
     "noEmit": true,
     "forceConsistentCasingInFileNames": true
   }
